...
//

import Foundation
import SwiftUI

let PotionsData: [PotionsModel] = [
    PotionsModel(name: "Restore Health", description: "Regain a certain amount of HP when ingesting.", image: "MinorHealing", points: "Full Health Restore", ingredient1: "Blue Mountain Flower", ingredient2: "Butterfly Wing", ingredient1IMG: "BlueMountainFlower", ingredient2IMG: "ButterflyWing", longDescription: "Health potions are probably the most commonly used potions in Skyrim. The Restore Heal

    PotionsModel(name: "Cure Disease", description: "After ingesting, you will be cured of all diseases which were present", image: "TreeSap", points: "Cure all Diseases", ingredient1: "Vampire Dust", ingredient2: "Charred Skeever Hide", ingredient1IMG: "VampireDust", ingredient2IMG: "CharredSkeeverHide", longDescription: "Getting a disease begins a slow, annoingly tedious chip away at your health

    PotionsModel(name: "Fortify Stamina", description: "Stamina will increase fully", image: "GreenBottle", points: "Restore 50% of Stamina", ingredient1: "Garlic", ingredient2: "Lavender", ingredient1IMG: "Garlic", ingredient2IMG: "Lavender", longDescription: "Swinging a Two-Handed weapon? Running away from Giants and their pet Mammoths after accidentally stealing from one of their chests unknowi

    PotionsModel(name: "Invisibility", description: "Become invisible for about 20 seconds", image: "Invisibility", points: "Invisibility for 1 Minute", ingredient1: "Chaurus Egg", ingredient2: "Nirnroot", ingredient1IMG: "ChaurusEgg", ingredient2IMG: "NirnRoot", longDescription: "This potion is excellent for getting out of a tight spot. Surrounded by enemies that outnumber you? Drink one of these
...
