...
                VStack(alignment: .leading) {
                    // navbar
                    NavBarView()
                        .background(Color.clear)
                        .padding(.horizontal, 40)
                        .padding(.top, 40)
                        .accessibilityIdentifier("settingsView")

                    // searchbar
                    SearchBar(text: $searchText)
                        .padding(.horizontal, 40)
                        .padding(.top, 20)
                        .accessibilityIdentifier("searchField")
...
