...
                )
                .shadow(radius: 5)
                .animation(.spring())
                .padding(.top, 170)
                // developer information
            }
            .navigationTitle("Settings")
            .navigationBarItems(trailing: Button(action: { print("Clicked")
                // close settings page
                presentationMode.wrappedValue.dismiss()

            }, label: {
                Image(systemName: "xmark")
...
